--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-SQLAlchemy
-starlette
-cacheout
-pydantic
-uvicorn
-fastapi
-PyJWT
-slowapi
+SQLAlchemy==1.4.39
+starlette==0.19.1
+cacheout==0.13.1
+pydantic==1.9.1
+uvicorn==0.18.2
+fastapi==0.79.0
+PyJWT==2.4.0
+slowapi==0.1.5
+zmail==0.2.8
